--- a/Facebook 2.0/Facebook 2.0.html
+++ b/Facebook 2.0/Facebook 2.0.html
@@ -17,7 +17,7 @@
     <section class="flexbox">
         <div class="caja1">
             <div class="subCaja1">
-                <img class="logoFacebook" src="../Assets/Img_Facebook/dF5SId3UHWd.svg" alt="">
+                <img class="logoFacebook" src="../Facebook 2.0/Img_Facebook/fb_icon_325x325.ico" alt="">
                 <h2 class="textoBienvenida"> Facebook te ayuda a comunicarte y compartir con las personas que forman
                     parte
                     de tu vida.</h2>
