--- a/Facebook 2.0/Facebook 2.0.html
+++ b/Facebook 2.0/Facebook 2.0.html
@@ -9,18 +9,16 @@
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Facebook 2.0</title>
-    <link rel="short icon" href="../Assets/Img_Facebook/fb_icon_325x325.ico">
-    <link rel="stylesheet" href="../Assets/CSS/estiloFacebook.css">
+    <link rel="short icon" href="Img_Facebook/fb_icon_325x325.ico">
+    <link rel="stylesheet" href="estiloFacebook.css">
 </head>
 
 <body>
     <section class="flexbox">
         <div class="caja1">
             <div class="subCaja1">
-                <img class="logoFacebook" src="../Facebook 2.0/Img_Facebook/fb_icon_325x325.ico" alt="">
-                <h2 class="textoBienvenida"> Facebook te ayuda a comunicarte y compartir con las personas que forman
-                    parte
-                    de tu vida.</h2>
+                <img class="logoFacebook" src="Img_Facebook/dF5SId3UHWd.svg" alt="">
+                <h2 class="textoBienvenida"> Facebook te ayuda a comunicarte y compartir con las personas que forman parte de tu vida.</h2>
             </div>
         </div>
         <div class="cajaPadre">
