--- a/Facebook 2.0/Facebook 2.0.html
+++ b/Facebook 2.0/Facebook 2.0.html
@@ -18,7 +18,8 @@
         <div class="caja1">
             <div class="subCaja1">
                 <img class="logoFacebook" src="Img_Facebook/dF5SId3UHWd.svg" alt="">
-                <h2 class="textoBienvenida"> Facebook te ayuda a comunicarte y compartir con las personas que forman parte de tu vida.</h2>
+                <h2 class="textoBienvenida"> Facebook te ayuda a comunicarte y compartir con las personas que forman
+                    parte de tu vida.</h2>
             </div>
         </div>
         <div class="cajaPadre">
@@ -49,8 +50,71 @@
             </div>
         </div>
 
-</body>
-</section>
+    </section>
+
+    <footer >
+        <section class="final">
+            <div class="parteFinal1">
+                <div> <a> Español </a> </div>
+                <div> <a href="#"> English (US) </a> </div>
+                <div> <a href="#"> Français (France) </a> </div>
+                <div> <a href="#"> Português (Brasil) </a> </div>
+                <div> <a href="#"> Italiano </a> </div>
+                <div> <a href="#"> Deutsch </a> </div>
+                <div> <a href="#"> العربية </a> </div>
+                <div> <a href="#"> हिन्दी </a> </div>
+                <div> <a href="#"> 中文(简体) </div>
+                <div> <a href="#"> 日本語 </a> </div>
+                <div> <button type="button" href="#"> + </button> </div>
+                <div></div>
+                
+            </div>
+
+            <hr class="borde">
+
+            <p>
+                <div class="parteFinal2">
+                    <a href="#"> Registrarte </a> 
+                    <a href="#"> Iniciar sesión </a> 
+                    <a href="#"> Messenger </a> </li>
+                    <a href="#"> Facebook Lite </a> 
+                    <a href="#"> Watch </a> 
+                    <a href="#"> Lugares </a>
+                    <a href="#"> Juegos </a>
+                    <a href="#"> Marketplace </a> 
+                    <a href="#"> Meta Pay </a> 
+                    <a href="#"> Oculus </a> 
+                    <a href="#"> Portal </a> 
+                    <a href="#"> Instagram </a> 
+                    <a href="#"> Bulletin </a> 
+                    <a href="#"> Recaudaciones de fondos </a> 
+                    <a href="#"> Servicios </a> 
+                    <a href="#"> Centro de información de votación </a> 
+                    <a href="#"> Política de privacidad </a> 
+                    <a href="#"> Centro de privacidad </a> 
+                    <a href="#"> Grupos </a>
+                    <a href="#"> Información </a> 
+                    <a href="#"> Crear anuncio </a> 
+                    <a href="#"> Crear página </a> 
+                    <a href="#"> Desarrolladores </a> 
+                    <a href="#"> Empleo </a> 
+                    <a href="#"> Cookies </a> 
+                    <a href="#"> Opciones de anuncios </a> 
+                    <a href="#"> Condiciones </a> 
+                    <a href="#"> Ayuda </a> 
+                    <a href="#"> Subir contactos y no usuarios </a> 
+                    <a href="#"> Configuración </a> 
+                    <a href="#"> Registro de actividad </a> 
+                </div>
+            </p>
+            
+            <p>
+            <div class="meta"> <a> Meta &copy; 2023</a> </div>
+            </p>
+        </section>
+    </footer>
+    </section>
+
 
 
 </body>
